update dashboard dan sidebar

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
         <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
           <div class="card-body">
             <i class="feather-64" data-feather="user-plus"></i>
-            <h5 class="card-title">Tambah User</h5>
+            <h5 class="card-title">Jumlah Dokter</h5>
             <p class="card-text">.</p>
           </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
           <div class="card-body">
             <i class="feather-64" data-feather="users"></i>
-            <h5 class="card-title">Users</h5>
+            <h5 class="card-title">Total Kunjungan</h5>
             <p class="card-text">.</p>
           </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
           <div class="card-body">
             <i class="feather-64" data-feather="thumbs-down"></i>
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Kerugian</h5>
             <p class="card-text">.</p>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
           <div class="card-body">
             <i class="feather-64" data-feather="smile"></i>
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Jumlah User</h5>
             <p class="card-text">.</p>
           </div>
         </div>
