--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -36,8 +36,8 @@ class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">
-        <span data-feather="layers"></span>
-        Integrations
+        <span data-feather="user-plus"></span>
+        Kelola User
       </a>
     </li>
   </ul>
