--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,7 @@
     <div class="login-form">
         <form action="{{url_for('login')}}" method="post">
             {{form.csrf_token}}
-            <h2 class="text-center">Login</h2>
+            <h2 class="text-center">Aplikasi Klinik</h2>
             {% if pesan %}
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <strong>{{pesan}}</strong>
