--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
     </button>
     <div class="navbar-nav">
       <div class="nav-item text-nowrap">
-        <a class="nav-link px-4" href="/logout" >Logout</a>
+        <a class="nav-link px-4" href="/logout" >{{session.username}}</a>
       </div>
     </div>
 </header>
