--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
     />
     <meta name="generator" content="Hugo 0.88.1" />
-    <title>Dashboard Template · Bootstrap v5.1</title>
+    <title>AppClinik</title>
 
     <!-- Bootstrap CSS -->
     <link
